Added transfer pages and other various changes.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,19 +11,22 @@
             <ion-item color="none" menuClose="" on-click="goToHome()" id="menu-list-item1">
                 Home
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToPickShipments()" id="menu-list-item2">
+            <ion-item color="none" menuClose="" on-click="goToTransfer()" id="menu-list-item2">
+                Transfer
+            </ion-item>
+            <ion-item color="none" menuClose="" on-click="goToPickShipments()" id="menu-list-item3">
                 Pick Shipments
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToItemLookup()" id="menu-list-item3">
+            <ion-item color="none" menuClose="" on-click="goToItemLookup()" id="menu-list-item4">
                 Item Lookup
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToBinLookup()" id="menu-list-item7">
+            <ion-item color="none" menuClose="" on-click="goToBinLookup()" id="menu-list-item5">
                 Bin Lookup
             </ion-item>
-            <ion-item color="none" menuClose="" id="menu-list-item8">
+            <ion-item color="none" menuClose="" id="menu-list-item6">
                 Physical Count
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="showPreferences()" id="menu-list-item9">
+            <ion-item color="none" menuClose="" on-click="showPreferences()" id="menu-list-item7">
                 Settings
             </ion-item>
             <!--<ion-item color="none" menuClose="" id="menu-list-item10">
