--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,22 +11,25 @@
             <ion-item color="none" menuClose="" on-click="goToHome()" id="menu-list-item1">
                 Home
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToTransfer()" id="menu-list-item2">
-                Transfer
-            </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToPickShipments()" id="menu-list-item3">
+            <ion-item color="none" menuClose="" on-click="goToPickShipments()" id="menu-list-item2">
                 Pick Shipments
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToItemLookup()" id="menu-list-item4">
+            <ion-item color="none" menuClose="" on-click="goToTransfer()" id="menu-list-item3">
+                Transfer
+            </ion-item>
+            <ion-item color="none" menuClose="" on-click="goToReceive()" id="menu-list-item4">
+                Receive
+            </ion-item>
+            <ion-item color="none" menuClose="" on-click="goToItemLookup()" id="menu-list-item5">
                 Item Lookup
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToBinLookup()" id="menu-list-item5">
+            <ion-item color="none" menuClose="" on-click="goToBinLookup()" id="menu-list-item6">
                 Bin Lookup
             </ion-item>
-            <ion-item color="none" menuClose="" id="menu-list-item6">
+            <ion-item color="none" menuClose="" id="menu-list-item7">
                 Physical Count
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="showPreferences()" id="menu-list-item7">
+            <ion-item color="none" menuClose="" on-click="showPreferences()" id="menu-list-item8">
                 Settings
             </ion-item>
             <!--<ion-item color="none" menuClose="" id="menu-list-item10">
