--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,9 +6,9 @@
             </ion-title>
         </ion-toolbar>
         <div>
-            <strong>{{prefs.getPreference('connection_username')}}</strong>
-            <strong>{{prefs.getPreference('connection_company')}}</strong>
-            <strong>{{prefs.getPreference('warehouse')}}</strong>
+            <span>{{prefs.getPreference('connection_username')}}</span><br/>
+            <span>{{prefs.getPreference('connection_company')}}</span><br/>
+            <span>{{prefs.getPreference('warehouse')}}</span><br/>
         </div>
     </ion-header>
     <ion-content id="side-menu21">
