Various stuffs continued
- Overhauled shipment picking process - completed.
- Completed CSS changes for lists on all pages except item/bin lookup.
- Added toolbars to pick/receive/count screens.
- Fixed issue with duplicate event listeners.
- Various other tweaks and bug fixes.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
                 AcuStock
             </ion-title>
         </ion-toolbar>
-        <div>
+        <div class="menu-info">
             <span>{{prefs.getPreference('connection_username')}}</span><br/>
             <span>{{prefs.getPreference('connection_company')}}</span><br/>
             <span>{{prefs.getPreference('warehouse')}}</span><br/>
