--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,11 @@
 // automatically applied to the <body> element in the app.
 @import "../../node_modules/ionic2-auto-complete/auto-complete";
 
+.menu-info {
+  margin: 5px 15px;
+  font-size: 11px;
+}
+
 .table-header {
   border-bottom: 1px solid #888;
   font-weight: bold;
@@ -21,12 +26,15 @@
 
 .item-list {
   padding: 0;
-  margin: 0;
+  margin-top: 0;
   ion-col {
     display: flex;
     flex-direction: row;
     flex-flow: row;
     align-items: center;
+  }
+  .list-md {
+    margin: 0 !important;
   }
 }
 
@@ -35,8 +43,10 @@
     padding: 0 !important;
   }
   .label {
-    margin-right: 0;
-    margin-bottom: 0;
+    margin: 0;
+  }
+  .item-group-header {
+    padding: 5px 0;
   }
   background: #fafafa;
 }
