Added adjustment functionality plus other stuff
- Added adjustment functionality - mostly completed.
- Added item locations & location items caching.
- Added function to limit quantity inputs to numeric characters.
- Fixed issues with long running process result for JS http backend.
- Removed transfer history - it can be a later thing.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -28,10 +28,13 @@
             <ion-item color="none" menuClose="" on-click="goToBinLookup()" id="menu-list-item6">
                 Bin Lookup
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="goToCount()" id="menu-list-item7">
+            <ion-item color="none" menuClose="" on-click="goToAdjustment()" id="menu-list-item7">
+                Adjustment
+            </ion-item>
+            <ion-item color="none" menuClose="" on-click="goToCount()" id="menu-list-item8">
                 Physical Count
             </ion-item>
-            <ion-item color="none" menuClose="" on-click="showPreferences()" id="menu-list-item8">
+            <ion-item color="none" menuClose="" on-click="showPreferences()" id="menu-list-item9">
                 Settings
             </ion-item>
             <!--<ion-item color="none" menuClose="" id="menu-list-item10">
