--- a/src/pages/preferences/preferences.scss
+++ b/src/pages/preferences/preferences.scss
@@ -17,5 +17,10 @@
  */
 
 page-preferences {
-
+  .preference-group {
+    margin-bottom: 15px;
+  }
+  .preference-header .label {
+    font-size: 1.6rem;
+  }
 }
