--- a/src/pages/item-lookup-details/serials/item-serials.scss
+++ b/src/pages/item-lookup-details/serials/item-serials.scss
@@ -16,24 +16,11 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-page-preferences {
-  .preference-group {
-    margin-bottom: 15px;
+page-item-serials {
+  tr td {
+    padding: 4px 0;
   }
-  .preference-header .label {
-    font-size: 1.6rem;
-  }
-
-  .item-input .label-md, .item-select .label-md, .item-datetime .label-md, .item-toggle .label-md {
-    color: #777 !important;
-  }
-
-}
-
-.theme-dark {
-  page-preferences {
-    .item-input .label-md, .item-select .label-md, .item-datetime .label-md, .item-toggle .label-md {
-      color: #d3d3d3 !important;
-    }
+  #details-container {
+    padding: 5px 15px;
   }
 }
