--- a/src/pages/item-lookup-details/item-lookup-details.scss
+++ b/src/pages/item-lookup-details/item-lookup-details.scss
@@ -20,32 +20,7 @@ page-item-lookup-details {
   tr td {
     padding: 4px 0;
   }
-  #details-container {
-
-    padding: 5px 15px;
-
-    #details-table {
-      transition: max-height 0.5s ease;
-      overflow: hidden;
-      max-height: 400px;
-    }
-
-    #chevron {
-      transition: all 0.5s ease;
-      margin: 18px 8px;
-      font-size: 2.2rem;
-    }
-  }
-
-  #details-container.collapsed {
-
-    #details-table {
-      max-height: 0;
-    }
-
-    #chevron {
-      transform: rotate(90deg);
-    }
-
+  .hidden {
+    display: none;
   }
 }
