--- a/src/pages/pick-shipments/details/pick-details-list.scss
+++ b/src/pages/pick-shipments/details/pick-details-list.scss
@@ -16,24 +16,6 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-page-preferences {
-  .preference-group {
-    margin-bottom: 15px;
-  }
-  .preference-header .label {
-    font-size: 1.6rem;
-  }
+page-pick-details-list {
 
-  .item-input .label-md, .item-select .label-md, .item-datetime .label-md, .item-toggle .label-md {
-    color: #777 !important;
-  }
-
-}
-
-.theme-dark {
-  page-preferences {
-    .item-input .label-md, .item-select .label-md, .item-datetime .label-md, .item-toggle .label-md {
-      color: #d3d3d3 !important;
-    }
-  }
 }
