--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -214,6 +214,12 @@ qrcode {
 }
 
 .location-selector {
+  ion-backdrop {
+    visibility: visible !important;
+    opacity: 0 !important;
+    z-index: -1;
+  }
+
   padding: 80px 30px 30px;
   background: rgba(0,0,0,0.5);
   ion-header, ion-toolbar {
