--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -47,8 +47,10 @@
 
 .menu-info {
   margin: 5px 15px;
-  font-size: 11px;
   padding: 5px 0;
+  span {
+    font-size: 14px;
+  }
 }
 
 .menu-list {
@@ -231,4 +233,88 @@ qrcode {
   ion-content > div {
     padding: 8px 5px 5px;
   }
+}
+
+.text-size-18 {
+
+  h1 {
+    margin-top: 2rem !important;
+    font-size: 2.3rem !important;
+  }
+
+  h2 {
+    margin-top: 1.8rem !important;
+    font-size: 2.1rem !important;
+  }
+
+  h3 {
+    font-size: 2rem !important;
+  }
+
+  h4 {
+    font-size: 2rem !important;
+  }
+
+  h5 {
+    font-size: 2rem !important;
+  }
+
+  h6 {
+    font-size: 1.8rem !important;
+  }
+
+  p, div, body {
+    font-size: 1.7rem;
+  }
+
+  .toolbar-title {
+    font-size: 2rem;
+  }
+
+  small {
+    font-size: 75% !important;
+  }
+
+}
+
+.text-size-20 {
+
+  h1 {
+    margin-top: 2rem !important;
+    font-size: 2.4rem !important;
+  }
+
+  h2 {
+    margin-top: 1.8rem !important;
+    font-size: 2.2rem !important;
+  }
+
+  h3 {
+    font-size: 2.1rem !important;
+  }
+
+  h4 {
+    font-size: 2.1rem !important;
+  }
+
+  h5 {
+    font-size: 2.1rem !important;
+  }
+
+  h6 {
+    font-size: 2rem !important;
+  }
+
+  p, div, body {
+    font-size: 1.8rem;
+  }
+
+  .toolbar-title {
+    font-size: 2rem;
+  }
+
+  small {
+    font-size: 75% !important;
+  }
+
 }
